--- a/styles/main.css
+++ b/styles/main.css
@@ -1,23 +1,47 @@
 body {
-    background-color: #FFF7F7;
+    background-color: #F4F4F4;
+    color: black;
+    font-family: Consolas, Arial, Tahoma, sans-serif;
+}
+.main {
     margin-left: 7vw;
     margin-right: auto;
     margin-top: 3vw;
     margin-bottom: auto;
-    color: black;
-    font-family: Consolas, Arial, Tahoma, sans-serif;
 }
-.bar{
+.primary {
+    max-width: 600px;
+}
+.secondary {
+    max-width: 84vw;
+}
+.bar {
     background-image: linear-gradient(to right, #FF007F, #FF5000);
-    margin-top: 60px;
+    color: white;
+    margin: 0;
+    width: auto;
+    height: 30px;
+}
+
+a:hover {
+    background-image: linear-gradient(to right, #FF007F, #FF5000) ;
+    color:white;
+}
+a {
+    color: #252525;
+}
+
+.header { 
+    /* font-size: 2.1vw; */
+    font-size: 2.5em;
 }
 .big { 
-    font-size: 1.8vw;
-
+    /* font-size: 1.7vw; */
+    font-size: 1.9em;
 }
 .medium {
-    font-size: 1.2vw;
+    font-size: 1em;
 }
 .small {
-    font-size: .9vw;
+    font-size: .85em;
 }
