--- a/styles/main.css
+++ b/styles/main.css
@@ -32,12 +32,12 @@ p {
     height: 30px; 
 }
 /* Hover link */
-a:hover {
+.link:hover {
     transition: 0.5s;
     background-image: linear-gradient(to right, #FF007F, #FF5000) ;
     color:white;
 }
-a {
+.link {
     color: #252525;
 }
 
@@ -60,4 +60,8 @@ a {
     margin-left: 3px;
     max-width: 24px;
     max-height: 24px;
+}
+#me {
+    display: flex;
+    justify-content: center;
 }
