--- a/styles/main.css
+++ b/styles/main.css
@@ -38,7 +38,12 @@ p {
     transition: 0.5s;
 }
 .link {
-    color: #252525;
+    color: black;
+}
+b:hover {
+    background-color: black;
+    color: white;
+    transition: 0.5s;
 }
 
 .header { 
@@ -47,7 +52,7 @@ p {
 }
 .big { 
     /* font-size: 1.7vw; */
-    font-size: 1.9em;
+    font-size: 1.5em;
 }
 .medium {
     font-size: 1em;
@@ -61,7 +66,7 @@ p {
     max-width: 24px;
     max-height: 24px;
 }
-#me {
+/* #me {
     display: flex;
     justify-content: center;
-}
+} */
