--- a/styles/main.css
+++ b/styles/main.css
@@ -14,6 +14,16 @@ p {
     margin-top: 5em;
     margin-bottom: 3vw;
 }
+.bar {
+    background-image: linear-gradient(to right, #FF007F, #FF5000);
+    color: white;
+    margin: 0;
+    height: 40px; 
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+/* Primary and Secondary Sizes for content */
 .primary {
     max-width: 600px;
     margin-right: 30px;
@@ -24,17 +34,8 @@ p {
     margin-right: 30px;
     margin-left: 20px;
 }
-.bar {
-    background-image: linear-gradient(to right, #FF007F, #FF5000);
-    color: white;
-    margin: 0;
+/* Navbar */
 
-    height: 30px; 
-    position: fixed;
-    top: 0;
-    width: 100%;
-
-}
 /* Hover link */
 .link:hover {
     background-image: linear-gradient(to right, #FF007F, #FF5000) ;
@@ -44,18 +45,17 @@ p {
 .link {
     color: black;
 }
+/* Bold Hover */
 b:hover {
     background-color: black;
     color: white;
     transition: 0.5s;
 }
-
+/* Custom Font Sizes */
 .header { 
-    /* font-size: 2.1vw; */
     font-size: 2.3em;
 }
 .big { 
-    /* font-size: 1.7vw; */
     font-size: 1.5em;
 }
 .medium {
@@ -64,11 +64,12 @@ b:hover {
 .small {
     font-size: .85em;
 }
+
 #logo {
-    margin-top: 3px;
-    margin-left: 3px;
-    max-width: 24px;
-    max-height: 24px;
+    margin-top: 4px;
+    margin-left: 4px;
+    max-width: 32px;
+    max-height: 32px;
 }
 /* #me {
     display: flex;
