--- a/styles/main.css
+++ b/styles/main.css
@@ -28,7 +28,6 @@ p {
     max-width: 32px;
     max-height: 32px;
 }
-
 .main {
     margin-left: 7vw;
     margin-right: auto;
@@ -85,7 +84,7 @@ b {
 }
 
 /* MOBILE RULES */
-@media only screen and (max-width: 780px) {
+@media only screen and (max-width: 1200px) {
     /* Navbar */
     .bar {
         height: 60px; 
@@ -98,16 +97,16 @@ b {
     }
     /* Main Block Margins */
     .main {
-        margin-left: 4vw;
-        margin-right: 4vw;
+        margin-left: 1em;
+        margin-right: 1em;
         margin-top: 2em;
-        margin-bottom: 6vh;
+        margin-bottom: 2em;
     }
     .top {
         margin-top: 12vh;
     }
     /* Primary and Secondary Sizes for content */
-    .primary {
+    /* .primary {
         max-width: 75vw;
         margin-right: 10px;
         margin-left: 10px;
@@ -116,7 +115,7 @@ b {
         max-width: 82vw;
         margin-right: 10px;
         margin-left: 10px;
-    }
+    } */
     /* Custom Font Sizes */
     .header { 
         font-size: 2.4em;
@@ -152,165 +151,3 @@ b {
         font-size: 110%;
     }
 }
-
-/* Rocker Switch CSS Rules */
-/* Credit to Marcus Connor:
-    https://codepen.io/marcusconnor/pen/QJNvMaa
- */
-*, *:before, *:after {
-    box-sizing: inherit;
-    margin:0;
-    padding:0;
-}
-.darkModeSwitch {
-    /* display: flex; */
-    /* align-items: center; */
-    justify-content: right;
-    margin-left: 75%;
-}
-
-
-/* Switch starts here */
-.rocker {
-    display: inline-block;
-    position: relative;
-    /*
-    SIZE OF SWITCH
-    ==============
-    All sizes are in em - therefore
-    changing the font-size here
-    will change the size of the switch.
-    See .rocker-small below as example.
-    */
-    font-size: 2em;
-    font-weight: bold;
-    text-align: center;
-    text-transform: uppercase;
-    color: #2c2c2c;
-    width: 7em;
-    height: 4em;
-    overflow: hidden;
-    border-bottom: 0.5em solid #666666;
-    }
-
-.rocker-small {
-    font-size: 0.55em; /* Sizes the switch */
-    margin: 0.1em;
-}
-
-.rocker::before {
-    content: "";
-    position: absolute;
-    top: 0.5em;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #2c2c2c;
-    border: 0.5em solid #666666;
-    border-bottom: 0;
-}
-
-.rocker input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-
-.switch-left,
-.switch-right {
-    cursor: pointer;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 2.5em;
-    width: 3em;
-    transition: 0.2s;
-}
-
-.switch-left {
-    height: 2.4em;
-    width: 2.75em;
-    left: 0.85em;
-    bottom: 0.4em;
-    background-color: #696969;
-    transform: rotate(15deg) skewX(15deg);
-}
-
-.switch-right {
-    right: 0.5em;
-    bottom: 0;
-    background-color: #461a38;
-    color: #ffffff;
-}
-
-.switch-left::before,
-.switch-right::before {
-    content: "";
-    position: absolute;
-    width: 0.4em;
-    height: 2.45em;
-    bottom: -0.45em;
-    background-color: #8f8f8f;
-    transform: skewY(-65deg);
-}
-
-.switch-left::before {
-    left: -0.4em;   
-}
-
-.switch-right::before {
-    right: -0.375em;
-    background-color: transparent;
-    transform: skewY(65deg);
-}
-
-input:checked + .switch-left {
-    background-color: #e45300;
-    color: #ffffff;
-    bottom: 0px;
-    left: 0.5em;
-    height: 2.5em;
-    width: 3em;
-    transform: rotate(0deg) skewX(0deg);
-}
-
-input:checked + .switch-left::before {
-    background-color: transparent;
-    width: 3.0833em;
-}
-
-input:checked + .switch-left + .switch-right {
-    background-color: #666666;
-    color: #2c2c2c;
-    bottom: 0.4em;
-    right: 0.8em;
-    height: 2.4em;
-    width: 2.75em;
-    transform: rotate(-15deg) skewX(-15deg);
-}
-
-input:checked + .switch-left + .switch-right::before {
-    background-color: #8f8f8f;
-}
-
-/* Keyboard Users */
-input:focus + .switch-left {
-    color: #333;
-}
-
-input:checked:focus + .switch-left {
-    color: #fff;
-}
-
-input:focus + .switch-left + .switch-right {
-    color: #fff;
-}
-
-input:checked:focus + .switch-left + .switch-right {
-    color: #333;
-}
-div {
-    outline: black solid 1px;
-}
-
