links aren't underlined for some reason?

--- a/styles/main.css
+++ b/styles/main.css
@@ -71,6 +71,7 @@ p {
 .link {
     color: black;
     font-size: 105%;
+    text-decoration: underline;
 }
 /* Bold Hover */
 b:hover {
@@ -139,6 +140,7 @@ b {
     .link {
         color: black;
         font-size: 110%;
+        text-decoration: underline;
     }
     /* Bold Hover */
     b:hover {
