--- a/styles/main.css
+++ b/styles/main.css
@@ -102,12 +102,13 @@ b {
         margin-right: 1em;
         margin-top: 2em;
         margin-bottom: 2em;
+        
     }
     .top {
-        margin-top: 12vh;
+        margin-top: 5em;
     }
-    /* Primary and Secondary Sizes for content */
-    /* .primary {
+    /* Primary and Secondary Sizes for content */ */
+    .primary {
         max-width: 75vw;
         margin-right: 10px;
         margin-left: 10px;
@@ -116,7 +117,7 @@ b {
         max-width: 82vw;
         margin-right: 10px;
         margin-left: 10px;
-    } */
+    }
     /* Custom Font Sizes */
     .header { 
         font-size: 2.4em;
@@ -149,7 +150,7 @@ b {
         transition: 0.5s;
         font-size: 112%;
     }
-    b {
+    b{
         font-size: 110%;
     }
 }
