partially implemented dark mode

--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,8 @@ body {
     color: black;
     font-family: 'Consolas', 'Courier New', Arial, Tahoma, sans-serif;
 }
+
+
 p {
     margin-top: .9em;
     margin-bottom: .9em;
@@ -83,6 +85,12 @@ b:hover {
 b {
     font-size: 105%;
 }
+@media (prefers-color-scheme: dark) { /* Dark Mode */
+    body {
+        background-color: #313131;
+        color: white;
+    }
+}
 
 /* MOBILE RULES */
 @media only screen and (max-width: 1200px) {
@@ -102,7 +110,6 @@ b {
         margin-right: 1em;
         margin-top: 2em;
         margin-bottom: 2em;
-        
     }
     .top {
         margin-top: 5em;
@@ -150,7 +157,21 @@ b {
         transition: 0.5s;
         font-size: 112%;
     }
-    b{
+    b {
         font-size: 110%;
+    }
+    @media (prefers-color-scheme: dark) { /* Dark Mode */
+        /* Hover link */
+        .link:hover {
+            color:#5f5f5f;
+        }
+        .link {
+            color: white;
+        }
+        /* Bold Hover */
+        b:hover {
+            background-color: white;
+            color: #5f5f5f;
+        }
     }
 }
