--- a/styles/main.css
+++ b/styles/main.css
@@ -23,16 +23,13 @@ p {
     height: 40px; 
 }
 .logo {
-    margin-top: 4px;
-    margin-left: 4px;
+    /* top | right | bottom | left */
+    margin: 4px 0 0 4px;
     max-width: 32px;
     max-height: 32px;
 }
 .main {
-    margin-left: 7vw;
-    margin-right: auto;
-    margin-top: 2vw;
-    margin-bottom: 3vw;
+    margin: 2vw auto 3vw 7vw;
 }
 .top {
     margin-top: 7em;
@@ -40,18 +37,15 @@ p {
 /* Primary and Secondary Sizes for content */
 .primary {
     max-width: 600px;
-    margin-right: 30px;
-    margin-left: 20px;
+    margin: 0 30px 0 20px;
 }
 .secondary {
     max-width: 82vw;
-    margin-right: 30px;
-    margin-left: 20px;
+    margin: 0 30px 0 20px;
 }
 .wide {
     max-width: 95vw;
-    margin-right: 20px;
-    margin-left: 20px;
+    margin: 0 20px 0 20px;
 }
 /* Custom Font Sizes */
 .header { 
@@ -113,14 +107,12 @@ b {
         font-size: 107%;
     }
 }
-
 .card {
     width: 18rem;
     color: black;
 }
 .projectCard {
-    margin-bottom: 25px;
-    margin-right: 25px;
+    margin: 0 0 20px 20px;
 }
 /* Remove underline from tile links */
 .projectCard:link { text-decoration: none; }
@@ -141,17 +133,13 @@ b {
         height: 60px; 
     }
     .logo {
-        margin-top: 5px;
-        margin-left: 5px;
+        margin: 5px 0 0 5px;
         max-width: 50px;
         max-height: 50px;
     }
     /* Main Block Margins */
     .main {
-        margin-left: 8vw;
-        margin-right: 8vw;
-        margin-top: 2em;
-        margin-bottom: 2em;
+        margin: 2em 8vw;
     }
     .top {
         margin-top: 7em;
@@ -205,9 +193,9 @@ b {
         max-width: 95vw;
         min-width: 360px;
     }
-    #projecTileList {
+    /* #projecTileList {
         justify-content: center;
-    }
+    } */
     @media (prefers-color-scheme: dark) { /* Dark Mode */
         /* Hover link */
         .link:hover {
@@ -226,18 +214,15 @@ b {
         width: 14rem;
     }
     .projectCard {
-        margin-bottom: 15px;
-        margin-right: 15px;
+        margin: 0 15px 15px 0;
     }
 }
 /* For Smallest Screens */
 @media only screen and (max-width: 550px) { 
-    .card {
-        max-width: 60vw;
-        width: 18rem;
+    #projecTileList {
+        justify-content: center;
     }
-    .projectCard {
-        margin-bottom: 15px;
-        margin-right: 15px;
+    .card {
+        width: 18rem;
     }
 }
