--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,16 @@
+/* TODO: create global color variables
+    TODO: change those variable for dark mode using media query 
+    
+    
+    
+    
+    */
+
+
+
+
+
+
 /* Fonts */
 @font-face {
     font-family: 'Calibri Light';
@@ -23,7 +36,7 @@ b {
     font-weight: bold;
 }
 #top { /* To push down top block of content */
-    margin-top: 7em;
+    margin-top: 5em;
 }
 
 .bg { /* Asset and css from https://codepen.io/iceable/pen/yLBrZOd !*/
@@ -54,22 +67,39 @@ b {
     90% { transform: translate(10%,5%) }
     100% { transform: translate(5%,0) }
 }
-/* End static effect css! */
-.bar { /* Navbar */
-    background-image: linear-gradient(to right, #FF007F, #FF5000);
-    color: white;
-    margin: 0;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 999;
-    height: 40px; 
+/* Courtesy of https://www.gradient-animator.com/! */
+.bottomBar {
+    background: linear-gradient(70deg, #ff4a00, #ff0075);
+    background-size: 300% 300%;
+
+    -webkit-animation: BottomBar 20s ease infinite;
+    -moz-animation: BottomBar 20s ease infinite;
+    -o-animation: BottomBar 20s ease infinite;
+    animation: BottomBar 20s ease infinite;
+
+    height: 20px;
 }
-.logo { /* Navigation Logo */
-    margin: 4px 0 0 4px;
-    max-width: 32px;
-    max-height: 32px;
+@-webkit-keyframes BottomBar {
+    0%{background-position:99% 0%}
+    50%{background-position:2% 100%}
+    100%{background-position:99% 0%}
 }
+@-moz-keyframes BottomBar {
+    0%{background-position:99% 0%}
+    50%{background-position:2% 100%}
+    100%{background-position:99% 0%}
+}
+@-o-keyframes BottomBar {
+    0%{background-position:99% 0%}
+    50%{background-position:2% 100%}
+    100%{background-position:99% 0%}
+}
+@keyframes BottomBar {
+    0%{background-position:99% 0%}
+    50%{background-position:2% 100%}
+    100%{background-position:99% 0%}
+}
+/* End animation css! */
 
 
 /* == LARGE SCREENS == */
@@ -94,10 +124,10 @@ b {
     font-size: 1.6em;
 }
 .medium {
-    font-size: 1.1em;
+    font-size: 1.2em;
 }
 .small {
-    font-size: .9em;
+    font-size: 1em;
 }
 .main { /* Content Alignment */
     margin: 2vw auto 3vw 7vw;
@@ -121,6 +151,7 @@ b {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: flex-start;
 }
 
 /* MEDIUM SCREENS */
@@ -136,9 +167,7 @@ b {
     .main { /* Content Alignment */
         margin: 2em 8vw;
     }   
-    #top { /* To push down top block of content */
-        margin-top: 7em;
-    }
+    
     /* Custom Font Sizes */
     .header { 
         font-size: 2.4em;
@@ -150,7 +179,7 @@ b {
         font-size: 1.3em;
     }
     .small {
-        font-size: 1em;
+        font-size: 1.1em;
     }
     /* Primary and Secondary Sizes for content */
     .primary {
@@ -182,8 +211,8 @@ b {
     .main { /* Content Alignment */
         margin: 2em 5vw;
     }
-    #top { /* To push down top block of content */
-        margin-top: 7em;
+    #top {
+        margin-top: 2.5em;
     }
     /* Primary and Secondary Sizes for content */
     .primary {
@@ -210,7 +239,7 @@ b {
     }
     /* Project Card Rules */
     .card {
-        width: 60vw;
+        width: 75vw;
     }
     .projectCard{
         margin: 7px auto;
